--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .idea/libraries/Dart_Packages.xml
 .idea/CITS3200-project.iml
 .idea/CITS3200-project.iml
+asthma_app/pubspec.lock
+.idea/CITS3200-project.iml
