--- a/asthma_app/pubspec.yaml
+++ b/asthma_app/pubspec.yaml
@@ -26,11 +26,13 @@ dependencies:
   firebase_auth: ^0.18.0+1
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   table_calendar: ^2.2.3
   cloud_firestore: ^0.14.0+2
+  http: ^0.12.2
 
 dev_dependencies:
   flutter_test:
