--- a/asthma_app/pubspec.yaml
+++ b/asthma_app/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   table_calendar: ^2.2.3
   cloud_firestore: ^0.14.0+2
+  datetime_picker_formfield: ^1.0.0
 
 dev_dependencies:
   flutter_test:
