--- a/asthma_app/pubspec.yaml
+++ b/asthma_app/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_auth: ^0.18.0+1
+  provider: ^4.3.2+2
 
 
   # The following adds the Cupertino Icons font to your application.
