--- a/asthma_app/pubspec.yaml
+++ b/asthma_app/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   firebase_auth: ^0.18.0+1
   provider: ^4.3.2+2
+  flutter_email_sender: ^3.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
