--- a/asthma_app/pubspec.yaml
+++ b/asthma_app/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cloud_firestore: ^0.14.0+2
   datetime_picker_formfield: ^1.0.0
   flutter_local_notifications: ^1.4.4+4
+  google_fonts: ^1.1.0
 
 dev_dependencies:
   flutter_test:
