--- a/asthma_app/pubspec.yaml
+++ b/asthma_app/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   table_calendar: ^2.2.3
   cloud_firestore: ^0.14.0+2
   datetime_picker_formfield: ^1.0.0
+  shared_preferences: ^0.5.12
 
 dev_dependencies:
   flutter_test:
