--- a/asthma_app/pubspec.yaml
+++ b/asthma_app/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   firebase_auth: ^0.18.0+1
   provider: ^4.3.2+2
   firebase_analytics: 6.0.0
+  firebase_storage: ^4.0.1
+  image_picker: ^0.5.3+1
 
 
   # The following adds the Cupertino Icons font to your application.
